# ESP_TEST_COMPONENT

./: README.md
nvs_rw_value/: CMakeLists.txt
nvs_rw_value/component/app_cmd_json/inc/: app_cmd_json.h
nvs_rw_value/component/app_cmd_json/src/: app_cmd_json.c
nvs_rw_value/component/app_nvs_value/inc/: app_nvs_value.h
nvs_rw_value/component/app_nvs_value/src/: app_nvs_value.c
nvs_rw_value/main/: CMakeLists.txt  nvs_value_main.c
spiffs/: CMakeLists.txt  run.sh  sdkconfig  sdkconfig.old
spiffs/component/app_spiffs/inc/: app_spiffs.h
spiffs/component/app_spiffs/src/: app_spiffs.c
spiffs/main/: CMakeLists.txt  spiffs_main.c
spiffs/spiffs_data/: myfile.txt
